# elemem-sdk

./: .gitignore  README.md  docker-compose.yml  release.sh
docs/: Elemem CEN-100 向量计算加速卡介绍.md  Elemem CEN100 向量数据库加速系统介绍.md  Elemem CEN100 向量计算加速卡介绍.md  Elemem 向量数据加速卡安装指南.md  Elemem 向量数据加速卡性能测试指南-C++.md  Elemem 向量数据加速卡性能测试指南.md  Elemem 向量数据加速卡软硬件版本说明书.md  Elemem 向量数据库加速卡介绍.md  ElememSDK Demo使用说明文档-C++.md  ElememSDK Demo使用说明文档-Python.md  ElememSDK Docker 部署手册.md  ElememSDK 基于Linux系统的软件安装指南.md  ElememSDK 客户端编程接口指南-C++.md  ElememSDK 客户端编程接口指南-Python.md  README.md  elemem 向量数据加速卡 SMI 使用手册.md  elemem_SMI_guide.md  elemem_api_docs.md  elemem_installation_guide.md  hilbert_v2_api_docs.md  向量数据加速卡用户手册.md
docs/1_安装部署/: Elemem 向量数据加速卡安装指南.md
docs/2_应用开发指南/: ElememSDK Demo使用说明文档-C++.md  ElememSDK Demo使用说明文档-Python.md  ElememSDK 客户端编程接口指南-C++.md  ElememSDK 客户端编程接口指南-Python.md
docs_obsolete/: Elemem CEN100 向量计算加速卡介绍.md  Elemem 向量数据加速卡常见问题.md  ElememSDK 基于Linux系统的软件安装指南.md  elemem_api_docs.md  向量数据加速卡用户手册.md
elemem_sdk/include/: hilbert_client.h
example/c++/: BUILD.bazel  hilbert_client_demo.cpp
example/python/: client_demo.py  requirements.txt  run.sh
pdf/: version.txt
